* Support for 4 byte ASNs. Many thanks to S.P.Zeidler for this.
* Makefile now honors DESTDIR. Thanks to Kaj Niemi for the patch.
* @RtConfig fix for IPv6. Thanks to Nick Hilliard for the report and
  to Timo Koehler for the patch.
* Fix when an IOS as-path list from an RPSL as-set contains more
  than one AS number. Thanks to Hagen Boehm for the patch.
* Compile fix for Solaris 9 and other systems that do not have
  stdint.h defined. Thanks to Hagen Boehm for reporting the problem.
* Fix for core dump on Solaris. Thanks to Matthew Moyle-Croft for the
  report and to S.P.Zeidler for the fix.
* Fix for invalid RtConfig output on Cisco when specifying family.
  Thanks to Daryl Collins for the report and to S.P.Zeidler for the
  fix.
* Cache file support when "irrd" protocol is used. Thanks to Hagen
  Boehm for the implementation.
* Build fixes for OS X.
* Build fix for gcc 4.2 (default on Debian and Ubuntu these days).
* Explicit check for flex and bison in configure.

4.8.5

Bug fix for RPSLng queries on IRRd servers.

Better support for 64-bit compilation.

Integrated a number of fixes from the NetBSD port as proposed by 
Havard Eidnes.

* Numerous compiler fixes:
  o src/config.h.in is amended to conditionally define __P(x).  Use
    __P() instead of _G_ARGS() in various places.
  o Many, many files are patched to replace occurrances of _G_uint32_t
    with uint32_t. The former is in the host compiler implementation's
    name space, and as far as I know, a library writer has no business
    assuming anything about the types defined in that name space
    (names starting with a single underscore character).
  o Instead of including <_G_config.h>, use <config.h>, and add
    includes of e.g. <sys/types.h> where needed.
  o A few troublesome casts removed which newer C++ compilers balk at.

* JunOS support enabled & fixed

* Portability to Dragonfly BSD (treat as FreeBSD)

* Bugfix for Cisco export

4.8.4
